[tool.poetry]
name = "building_limit_splitter"
version = "0.1.0"
description = ""
authors = ["Soleh Ruziboev <solehjon.ruziboev@cognite.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
Flask = "^2.2.2"
geopandas = "^0.12.2"
pytest = "^7.2.0"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
psycopg2 = "^2.9.5"
shapely = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
